--- a/portal-noticias.yaml
+++ b/portal-noticias.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: portal-noticias-container
-      image: nginx:latest
+      image: aluracursos/portal-noticias:1
       ports:
         - containerPort: 80
       envFrom:
