--- a/portal-configmap.yaml
+++ b/portal-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
-metadata: 
+metadata:
   name: portal-configmap
-data: 
-  IP_SISTEMA: localhost:30001/
+data:
+  IP_SISTEMA: http://localhost:30001
